--- a/frontend/general.html
+++ b/frontend/general.html
@@ -5,12 +5,12 @@
   </head>
   <body>
     <h1>Carbon Footprint Calculator</h1>
-    <form>
+    <form action="/api/" >
       <label for="product">Select Product:</label>
       <select id="product" name="product">
-        <option value="item1">FOOD</option>
-        <option value="item2">FURNITURE 2</option>
-        <option value="item3">KITCHEN ACCESSORIES</option>
+        <option value="tissues">tissues</option>
+        <option value="plastic-cutlery">plastic-cutlery 2</option>
+        <option value="heater">heater</option>
         <option value="item4">MAKE UP</option>
         <option value="item5">CLOTHING</option>
 
