--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,6 +37,6 @@
   <body>
     <h1>Carbon Footprint Calculator</h1>
     <p class="description">Calculate your carbon footprint and learn how to reduce it</p>
-    <a href="calculator.html" class="start-btn">Start</a>
+    <a href="general/" class="start-btn">Start</a>
   </body>
 </html>
