--- a/extension/index.html
+++ b/extension/index.html
@@ -7,5 +7,8 @@
     <h4>Your actions matter!</h4>
     <button id="start" >start</button>
     <script src="popup.js"></script>
+    <div id="prodcont" >
+
+    </div>
 </body>
 </html>
