--- a/extension/index.html
+++ b/extension/index.html
@@ -20,6 +20,13 @@
     text-align: center;
     font-size: xx-large;
 }
+.truncate {
+    display: inline-block;
+  width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 #f{
     color: black;
     font-size: large;
