--- a/frontend/Svelte/src/Signup.html
+++ b/frontend/Svelte/src/Signup.html
@@ -14,5 +14,6 @@
       <input type="password" id="password" name="password"><br><br>
       <input type="submit" value="Sign Up">
     </form>
+    <script src="logic.js"></script>
   </body>
 </html>
